My second commit without staging

--- a/Drop.html
+++ b/Drop.html
@@ -116,6 +116,7 @@ footer a:hover{
         <a href="">web</a>
         <a href="">html</a>
         </div>
+        <p>This is the paragraph</p>
 
 
     </footer>
