my third commit

--- a/drop.html
+++ b/drop.html
@@ -73,10 +73,10 @@ footer{
 .social a{
     font-size:30px ;
     padding:20px ;
-    color: aqua;
+    color:burlywood;
 }
 .social a:hover{
-    color:aliceblue;
+    color:bisque;
 }
 .web{
     display: flex;
